Some DDS image textures don't appear in 3D View and Game Engine, others do. #34908

Closed
opened 2013-04-07 08:33:14 +02:00 by Don Laursen · 3 comments

%%%--- Operating System, Graphics card ---

Ubuntu 12.10 Desktop x86_64
NVIDIA GeForce GTX 460 (Driver: 310.14-0ubuntu1)

- Blender version with error, and version that worked ---

Good: 2.63a-1ubuntu1
Good: blender-2.65a-linux-glibc211-x86_64.tar.bz2 (official)
Bad: blender-2.66-linux-glibc211-x86_64.tar.bz2 (official)
Bad: blender-2.66a-linux-glibc211-x86_64.tar.bz2 (official)
Bad: blender_55453 (graphicall.org 2.66.3 + OSL Ubuntu/Mint x86_64)

- Short description of error ---

In Blender 2.66 and later, some DDS image textures display all-gray in Singletexture/Multitexture mode and all-black in GLSL mode. The normal 3D View and Game Engine are both affected, but rendering with Blender Render is not.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Create a new .blend file in Blender 2.65a. Change Viewport Shading to Texture.

  2. Create a cube with an empty image texture, duplicate the cube several times, and give each cube a new material and texture.

  3. Load "good" and "bad" DDS files as the texture images and set up UV. All the textures should be visible in Singletexture, Multitexture, and GLSL mode, whether or not the game engine is running. They should look fine when rendered with Blender Render, too.

  4. Save the .blend file.

  5. Open the .blend file in Blender 2.66 or later. The "bad" cubes will be gray in Singletexture/Multitexture mode and black in GLSL mode, whether or not the game engine is running. They should look fine when rendered with Blender Render.

Note: Creating the .blend file in Blender 2.65a isn't necessary to trigger the problem. I only included that in the instructions to show that the "bad" textures worked in older versions. If you create the file in Bender 2.66 or later, the "bad" textures still won't work, except when rendered.%%%

%%%--- Operating System, Graphics card --- Ubuntu 12.10 Desktop x86_64 NVIDIA GeForce GTX 460 (Driver: 310.14-0ubuntu1) - Blender version with error, and version that worked --- Good: 2.63a-1ubuntu1 Good: blender-2.65a-linux-glibc211-x86_64.tar.bz2 (official) Bad: blender-2.66-linux-glibc211-x86_64.tar.bz2 (official) Bad: blender-2.66a-linux-glibc211-x86_64.tar.bz2 (official) Bad: blender_55453 (graphicall.org 2.66.3 + OSL Ubuntu/Mint x86_64) - Short description of error --- In Blender 2.66 and later, some DDS image textures display all-gray in Singletexture/Multitexture mode and all-black in GLSL mode. The normal 3D View and Game Engine are both affected, but rendering with Blender Render is not. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Create a new .blend file in Blender 2.65a. Change Viewport Shading to Texture. 2. Create a cube with an empty image texture, duplicate the cube several times, and give each cube a new material and texture. 3. Load "good" and "bad" DDS files as the texture images and set up UV. All the textures should be visible in Singletexture, Multitexture, and GLSL mode, whether or not the game engine is running. They should look fine when rendered with Blender Render, too. 4. Save the .blend file. 5. Open the .blend file in Blender 2.66 or later. The "bad" cubes will be gray in Singletexture/Multitexture mode and black in GLSL mode, whether or not the game engine is running. They should look fine when rendered with Blender Render. Note: Creating the .blend file in Blender 2.65a isn't necessary to trigger the problem. I only included that in the instructions to show that the "bad" textures worked in older versions. If you create the file in Bender 2.66 or later, the "bad" textures still won't work, except when rendered.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34908
No description provided.