Fix #34908: compressed DDS files did not display properly when their mipmap levels did not go down to 1x1 image size, need to set GL_TEXTURE_MAX_LEVEL then.